--- a/build.gradle
+++ b/build.gradle
@@ -113,7 +113,7 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-        
+        compile 'com.github.nkzawa:socket.io-client:0.3.0'
     }
 }
 
